Improve code style by reformatting, adding final and convert for loops.
Also remove commented and generated code blocks. Forms are not working
in my IntelliJ IDEA IDE.